--- a/package.json
+++ b/package.json
@@ -16,6 +16,9 @@
     "expo-status-bar": "~1.4.2",
     "react": "18.1.0",
     "react-native": "0.70.5",
+    "react-native-collapsible-tab-view": "^4.5.2",
+    "react-native-pager-view": "6.0.1",
+    "react-native-reanimated": "~2.12.0",
     "react-native-safe-area-context": "^4.4.1",
     "react-native-screens": "~3.18.0",
     "react-native-switch-selector": "^2.3.0",
