--- a/package.json
+++ b/package.json
@@ -25,7 +25,8 @@
     "react-native-vector-icons": "^9.2.0"
   },
   "devDependencies": {
-    "@babel/core": "^7.12.9"
+    "@babel/core": "^7.12.9",
+    "eslint": "^8.34.0"
   },
   "private": true
 }
