--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
     "start": "expo start",
     "android": "expo start --android",
     "ios": "expo start --ios",
-    "web": "expo start --web"
+    "web": "expo start --web",
+    "test": "jest"
   },
   "dependencies": {
     "@react-navigation/bottom-tabs": "^6.5.4",
@@ -26,7 +27,8 @@
   },
   "devDependencies": {
     "@babel/core": "^7.12.9",
-    "eslint": "^8.34.0"
+    "eslint": "^8.34.0",
+    "jest": "^29.4.3"
   },
   "private": true
 }
