--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "android": "expo start --android",
     "ios": "expo start --ios",
     "web": "expo start --web",
-    "test": "jest"
+    "test": "jest --watch"
   },
   "dependencies": {
     "@react-navigation/bottom-tabs": "^6.5.4",
@@ -15,6 +15,8 @@
     "@react-navigation/native-stack": "^6.9.9",
     "expo": "~47.0.12",
     "expo-status-bar": "~1.4.2",
+    "jest": "^26.6.3",
+    "jest-expo": "^47.0.1",
     "react": "18.1.0",
     "react-native": "0.70.5",
     "react-native-collapsible-tab-view": "^4.5.2",
@@ -23,12 +25,19 @@
     "react-native-safe-area-context": "^4.4.1",
     "react-native-screens": "~3.18.0",
     "react-native-switch-selector": "^2.3.0",
-    "react-native-vector-icons": "^9.2.0"
+    "react-native-vector-icons": "^9.2.0",
+    "react-test-renderer": "^18.1.0"
   },
   "devDependencies": {
     "@babel/core": "^7.12.9",
     "eslint": "^8.34.0",
-    "jest": "^29.4.3"
+    "prettier": "2.8.4"
+  },
+  "jest": {
+    "preset": "jest-expo",
+    "transformIgnorePatterns": [
+      "node_modules/(?!((jest-)?react-native|@react-native(-community)?)|expo(nent)?|@expo(nent)?/.*|@expo-google-fonts/.*|react-navigation|@react-navigation/.*|@unimodules/.*|unimodules|sentry-expo|native-base|react-native-svg)"
+    ]
   },
   "private": true
 }
